--- a/main.html
+++ b/main.html
@@ -10,6 +10,30 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<table>
+		<thead>
+			<tr>
+				<th>Roll numbers</th>
+				<th>Names</th>
+			</tr>
+			</thead>
+		<tbody>
+			<tr>
+				<td>123</td>
+				<td>kiran</td>
+			</tr>
+			<tr>
+				<td>456</td>
+				<td>sai</td>
+			</tr>
+			</tbody>
+	</table>
+
+	<ol>
+		<li><img src="https://picsum.photos/id/123/200/300" alt="img"></li>
+		<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4" controls></li>
+		<li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" controls></li>
+	</ol>
 
 </body>
 
