--- a/main.html
+++ b/main.html
@@ -31,7 +31,9 @@
 <h1>List of medias</h1>
 	<ol>
 		<li><img src="https://picsum.photos/id/123/200/300" alt="img"></li>
-		<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4" controls></li>
+		<li><video controls>
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+		</video</li>
 		<li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" controls></li>
 	</ol>
 
